# FileNamesManager

./: .gitignore  CMakeLists.txt  README.md  project_plan.md
src/: FileScanner.cpp  FileScanner.h  main.cpp
